Edited wiki page through web user interface.

--- a/wiki/DownvoteDetection.wiki
+++ b/wiki/DownvoteDetection.wiki
@@ -26,3 +26,16 @@ The hard part was to put this entire thing into a GUI - and have proper UI behav
 I'm not naive about the fact that my differential algorithm is not 100% safe - there are some strange value change patterns occurring, but I would say, in 80% of the case, there is an obvious -1 and -2 pair of reputation change: the downvoter and the downvoted.
 
 The technology is also in some way abusive - it queries the public listing pages of the target SO sites on every 60 seconds, and for multi-page (e.g. active page) listings, it keeps a 1 second wait between site queries - currently this configuration is hard-coded.
+
+Another drawback is, that not everyone's reputation change is visible. If the user doesn't appear on the active, hot or newest listings, on the top user listings (or later on, in the Top30 badge activists) there is no good way to detect that change. 
+
+I should also mention, if you see a pair of rep change, it might not mean they are related, the downvoter operated on a different user whereas the downvoted received it from somebody else. *Therefore, THINK ABOUT IT BEFORE ACCUSING SOMEONE!*
+
+= And what about users with rep above 10k =
+
+Good eyes man! This is a very dark spot in face of the algorithm, because these users have most of their reputation display rounded up to thousand. You see 10, 10.1, 10.2 etc., N * 100 jumps! Today (08-05) only the main stackoverflow.com is affected - the other sites have users currently below 10k - but not for long I guess.
+
+There is one place you can get an exact reputation value: the public User Profile. Hmm.
+The 0.74 has the ability to watch some user's profile in the RepBar - and use this frequently updated information in the detection algorithm - especially if you are suspecting someone hates you (right Rich B?).
+
+Unfortunately, retrieving user profile is slower and has number and frequency limitations.  Just by looking at the server log it becomes obvious: your IP address queries more than one (e.g your own reputation) user profile in a loop. You might get banned, or worse - the site starts to lie to you randomly: the user profile becomes unreliable information source and what not. *BE CAREFUL WHO YOU WATCH. WATCH YOURSELF!*
